# arduino_daq

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
arduino_firmware/: arduino_daq.atsln  steer_controller_dac_encoder_interface.atsln
arduino_firmware/arduino_daq/ArduinoCore/: ArduinoCore.componentinfo.xml  ArduinoCore.cppproj  library.cpp
arduino_firmware/arduino_daq/ArduinoCore/Release/: Makefile  makedep.mk
arduino_firmware/arduino_daq/ArduinoCore/Release/src/core/: HID.d
arduino_firmware/arduino_daq/ArduinoCore/Release/src/libraries/SPI/: SPI.d
arduino_firmware/arduino_daq/ArduinoCore/Release/src/libraries/Wire/: Wire.d
arduino_firmware/arduino_daq/ArduinoCore/Release/src/libraries/Wire/utility/: twi.d
arduino_firmware/arduino_daq/arduino_daq/: Encoder_EMS22A.h  README.md  Sketch.cpp  arduino_daq.componentinfo.xml  arduino_daq.cppproj  arduinodaq2pc-structs.h  arduinodaq_declarations.h  config.h  main.cpp  mod_dac_max5500.cpp  mod_dac_max5500.h  process_ADCs.cpp  process_EMS22A.cpp  process_command.cpp  process_encoder.cpp  serial.cpp
arduino_firmware/arduino_daq/arduino_daq/Release/: Makefile  Sketch.d  arduino_daq.hex  steer_controller_dac_encoder_interface.elf  steer_controller_dac_encoder_interface.hex  steer_controller_dac_encoder_interface.lss  steer_controller_dac_encoder_interface.map  steer_controller_dac_encoder_interface.srec
arduino_firmware/steer_controller_dac_encoder_interface/steer_controller_dac_encoder_interface/: Sketch.cpp  arduinodaq2pc-structs.h  steer_controller_dac_encoder_interface.cppproj
example_app/: CMakeLists.txt  arduino_daq_main_standalone.cpp
include/arduino_daq/: ArduinoDAQ_LowLevel.h
libarduinodaq/: CMakeLists.txt  README.md
msg/: AnalogReading.msg  EncoderAbsReading.msg  EncodersReading.msg
src/: arduino_daq_node.cpp
src/arduino_daq/: ArduinoDAQ_LowLevel.cpp
