<?xml version="1.0"?>
<package format="2">
  <name>arduino_daq</name>
  <version>1.0.0</version>
  <description>The arduino_daq package</description>

  <maintainer email="jlblanco@ual.es">Jose Luis Blanco Claraco</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt1</depend> <!-- Depend on mrpt1 ROS pkgs -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
